[package]
name = "wamp-client"
version = "0.1.0"
authors = ["Vlad Frolov <frolvlad@gmail.com>"]
edition = "2018"

[dependencies]
futures = "0.3.0"
tokio = "0.2.0-alpha.6"
tokio-tls = "0.2.0-alpha.6"

tungstenite = { git = "https://github.com/snapview/tungstenite-rs.git", branch = "master" }
tokio-tungstenite = { git = "https://github.com/frol/tokio-tungstenite.git", branch = "patch-1" }

tracing = "0.1.9"
tracing-futures = { version = "0.1.0", features = ["std-future"] }
tracing-subscriber = "0.1.5"

serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.41", optional = true }
url = "2.1.0"
regex = "1.3.1"
lazy_static = "1.4.0"
rand = "0.7.2"

[features]
default = ["callee", "caller", "publisher", "subscriber", "serde_json"]
callee = []
caller = []
publisher = []
subscriber = []
